Adding all files

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,12 +6,12 @@ pipeline {
 	stages{
 		stage('Automation_101') {
 			steps {
-				echo "Starting"
+				echo 'Starting'
 			}
 		}
 		stage('Build') {
 			steps{
-				git 'https://github.com/sinhaa-aankit/MavenSelenium-Automation.git'
+				git branch: 'main', url: 'https://github.com/sinhaa-aankit/MavenSelenium-Automation.git'
 				sh './mvn clean compile'
 			}
 		}
